--- a/exercise-2-productivity-tricks/start/index.html
+++ b/exercise-2-productivity-tricks/start/index.html
@@ -1,21 +1,54 @@
-<!-- Step 1
-  <div class="has-text-centered">
-    <img src="logo.png" alt="" />
-  </div>
-  <div class="section">
-    <div class="columns">
-    </div>
-  </div> -->
+<!DOCTYPE html>
+<html lang="en">
 
-<!-- Step 2: Goes inside of the div with a "columns" class
-  <div class="column is-10">
-    <input
-      id="colorInput"
-      class="input is-large"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" />
+  <title>I Love Lamp</title>
+  <style>
+    html {
+      background-image: url("./background.jpeg");
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 100%;
+      min-height: 1400px;
+    }
+
+    body {
+      background-color: rgba(255, 255, 255, 0.8);
+      height: 100%;
+    }
+
+    #app {
+      max-width: 800px;
+    }
+
+    #lightBulb {
+      width: 482px;
+      margin: auto;
+    }
+  </style>
+</head>
+
+<body>
+  <div id="app" class="container">
+    <div class="has-text-centered">
+      <img src="logo.png" alt="" width="1055" height="269" />
+    </div>
+    <div class="section">
+      <div class="columns">
+        <div class="column is-10">
+          <input id="colorInput" class="input is-large" />
+        </div>
+        <div class="column">
+          <a id="goButton" class="button is-large is-primary">
+            Go
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="column">
-    <a id="goButton" class="button is-large is-primary">
-      Go
-    </a>
-  </div> -->
+</body>
+
+</html>
